dataset1235/2025-2/1153765216/users/230013788/executions/2052804200_254684124.log
== RUN (2025-09-03 16:26:19)
-- CODE: 
idade = int(input("20"))
if idade>= 18:
    print("Você é MAIOR de idade. ")
else: 
  print("Voce é MENOR de idade. ")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
28
---- correct output:
28
Maior_de_idade
---- user output:
20Você é MAIOR de idade.
-- TEST CASE 2:
---- input:
17
---- correct output:
17
Menor_de_idade
---- user output:
20Voce é MENOR de idade.
-- TEST CASE 3:
---- input:
10
---- correct output:
10
Menor_de_idade
---- user output:
20Voce é MENOR de idade.
-- TEST CASE 4:
---- input:
18
---- correct output:
18
Maior_de_idade
---- user output:
20Você é MAIOR de idade.
-- TEST CASE 5:
---- input:
22
---- correct output:
22
Maior_de_idade
---- user output:
20Você é MAIOR de idade.
-- TEST CASE 6:
---- input:
18
---- correct output:
18
Maior_de_idade
---- user output:
20Você é MAIOR de idade.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-03 16:29:02)
-- CODE: 
idade = int(input("20. "))
if idade>= 18:
    print("Você é MAIOR de idade. ")
else: 
  print("Voce é MENOR de idade. ")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
28
---- correct output:
28
Maior_de_idade
---- user output:
20. Você é MAIOR de idade.
-- TEST CASE 2:
---- input:
17
---- correct output:
17
Menor_de_idade
---- user output:
20. Voce é MENOR de idade.
-- TEST CASE 3:
---- input:
10
---- correct output:
10
Menor_de_idade
---- user output:
20. Voce é MENOR de idade.
-- TEST CASE 4:
---- input:
18
---- correct output:
18
Maior_de_idade
---- user output:
20. Você é MAIOR de idade.
-- TEST CASE 5:
---- input:
22
---- correct output:
22
Maior_de_idade
---- user output:
20. Você é MAIOR de idade.
-- TEST CASE 6:
---- input:
18
---- correct output:
18
Maior_de_idade
---- user output:
20. Você é MAIOR de idade.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-03 16:25:45)
-- CODE: 
idade = int(input("Digite a sua idade: "))
if idade>= 18:
    print("Você é MAIOR de idade. ")
else: 
  print("Voce é MENOR de idade. ")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
28
---- correct output:
28
Maior_de_idade
---- user output:
Digite a sua idade: Você é MAIOR de idade.
-- TEST CASE 2:
---- input:
17
---- correct output:
17
Menor_de_idade
---- user output:
Digite a sua idade: Voce é MENOR de idade.
-- TEST CASE 3:
---- input:
10
---- correct output:
10
Menor_de_idade
---- user output:
Digite a sua idade: Voce é MENOR de idade.
-- TEST CASE 4:
---- input:
18
---- correct output:
18
Maior_de_idade
---- user output:
Digite a sua idade: Você é MAIOR de idade.
-- TEST CASE 5:
---- input:
22
---- correct output:
22
Maior_de_idade
---- user output:
Digite a sua idade: Você é MAIOR de idade.
-- TEST CASE 6:
---- input:
18
---- correct output:
18
Maior_de_idade
---- user output:
Digite a sua idade: Você é MAIOR de idade.
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-03 16:26:15)
-- CODE: 
idade = int(input("20"))
if idade>= 18:
    print("Você é MAIOR de idade. ")
else: 
  print("Voce é MENOR de idade. ")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
28
---- correct output:
28
Maior_de_idade
---- user output:
20Você é MAIOR de idade.
-- TEST CASE 2:
---- input:
17
---- correct output:
17
Menor_de_idade
---- user output:
20Voce é MENOR de idade.
-- TEST CASE 3:
---- input:
10
---- correct output:
10
Menor_de_idade
---- user output:
20Voce é MENOR de idade.
-- TEST CASE 4:
---- input:
18
---- correct output:
18
Maior_de_idade
---- user output:
20Você é MAIOR de idade.
-- TEST CASE 5:
---- input:
22
---- correct output:
22
Maior_de_idade
---- user output:
20Você é MAIOR de idade.
-- TEST CASE 6:
---- input:
18
---- correct output:
18
Maior_de_idade
---- user output:
20Você é MAIOR de idade.
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-03 16:25:55)
-- CODE: 
idade = int(input("Digite a sua idade: "))
if idade>= 18:
    print("Você é MAIOR de idade. ")
else: 
  print("Voce é MENOR de idade. ")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
28
---- correct output:
28
Maior_de_idade
---- user output:
Digite a sua idade: Você é MAIOR de idade.
-- TEST CASE 2:
---- input:
17
---- correct output:
17
Menor_de_idade
---- user output:
Digite a sua idade: Voce é MENOR de idade.
-- TEST CASE 3:
---- input:
10
---- correct output:
10
Menor_de_idade
---- user output:
Digite a sua idade: Voce é MENOR de idade.
-- TEST CASE 4:
---- input:
18
---- correct output:
18
Maior_de_idade
---- user output:
Digite a sua idade: Você é MAIOR de idade.
-- TEST CASE 5:
---- input:
22
---- correct output:
22
Maior_de_idade
---- user output:
Digite a sua idade: Você é MAIOR de idade.
-- TEST CASE 6:
---- input:
18
---- correct output:
18
Maior_de_idade
---- user output:
Digite a sua idade: Você é MAIOR de idade.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-03 16:26:17)
-- CODE: 
idade = int(input("20"))
if idade>= 18:
    print("Você é MAIOR de idade. ")
else: 
  print("Voce é MENOR de idade. ")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
28
---- correct output:
28
Maior_de_idade
---- user output:
20Você é MAIOR de idade.
-- TEST CASE 2:
---- input:
17
---- correct output:
17
Menor_de_idade
---- user output:
20Voce é MENOR de idade.
-- TEST CASE 3:
---- input:
10
---- correct output:
10
Menor_de_idade
---- user output:
20Voce é MENOR de idade.
-- TEST CASE 4:
---- input:
18
---- correct output:
18
Maior_de_idade
---- user output:
20Você é MAIOR de idade.
-- TEST CASE 5:
---- input:
22
---- correct output:
22
Maior_de_idade
---- user output:
20Você é MAIOR de idade.
-- TEST CASE 6:
---- input:
18
---- correct output:
18
Maior_de_idade
---- user output:
20Você é MAIOR de idade.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-03 16:26:02)
-- CODE: 
idade = int(input("Digite a sua idade: "))
if idade>= 18:
    print("Você é MAIOR de idade. ")
else: 
  print("Voce é MENOR de idade. ")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
28
---- correct output:
28
Maior_de_idade
---- user output:
Digite a sua idade: Você é MAIOR de idade.
-- TEST CASE 2:
---- input:
17
---- correct output:
17
Menor_de_idade
---- user output:
Digite a sua idade: Voce é MENOR de idade.
-- TEST CASE 3:
---- input:
10
---- correct output:
10
Menor_de_idade
---- user output:
Digite a sua idade: Voce é MENOR de idade.
-- TEST CASE 4:
---- input:
18
---- correct output:
18
Maior_de_idade
---- user output:
Digite a sua idade: Você é MAIOR de idade.
-- TEST CASE 5:
---- input:
22
---- correct output:
22
Maior_de_idade
---- user output:
Digite a sua idade: Você é MAIOR de idade.
-- TEST CASE 6:
---- input:
18
---- correct output:
18
Maior_de_idade
---- user output:
Digite a sua idade: Você é MAIOR de idade.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-03 16:26:44)
-- CODE: 
idade = int(input("Digite a sua idade: "))
if idade>= 18:
    print("Você é MAIOR de idade. ")
else: 
  print("Voce é MENOR de idade. ")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
28
---- correct output:
28
Maior_de_idade
---- user output:
Digite a sua idade: Você é MAIOR de idade.
-- TEST CASE 2:
---- input:
17
---- correct output:
17
Menor_de_idade
---- user output:
Digite a sua idade: Voce é MENOR de idade.
-- TEST CASE 3:
---- input:
10
---- correct output:
10
Menor_de_idade
---- user output:
Digite a sua idade: Voce é MENOR de idade.
-- TEST CASE 4:
---- input:
18
---- correct output:
18
Maior_de_idade
---- user output:
Digite a sua idade: Você é MAIOR de idade.
-- TEST CASE 5:
---- input:
22
---- correct output:
22
Maior_de_idade
---- user output:
Digite a sua idade: Você é MAIOR de idade.
-- TEST CASE 6:
---- input:
18
---- correct output:
18
Maior_de_idade
---- user output:
Digite a sua idade: Você é MAIOR de idade.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-03 16:27:02)
-- CODE: 
idade = int(input("Digite a sua idade: "))
if idade>= 18:
    print("Você é MAIOR de idade. ")
else: 
  print("Voce é MENOR de idade. ")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
28
---- correct output:
28
Maior_de_idade
---- user output:
Digite a sua idade: Você é MAIOR de idade.
-- TEST CASE 2:
---- input:
17
---- correct output:
17
Menor_de_idade
---- user output:
Digite a sua idade: Voce é MENOR de idade.
-- TEST CASE 3:
---- input:
10
---- correct output:
10
Menor_de_idade
---- user output:
Digite a sua idade: Voce é MENOR de idade.
-- TEST CASE 4:
---- input:
18
---- correct output:
18
Maior_de_idade
---- user output:
Digite a sua idade: Você é MAIOR de idade.
-- TEST CASE 5:
---- input:
22
---- correct output:
22
Maior_de_idade
---- user output:
Digite a sua idade: Você é MAIOR de idade.
-- TEST CASE 6:
---- input:
18
---- correct output:
18
Maior_de_idade
---- user output:
Digite a sua idade: Você é MAIOR de idade.
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-03 16:29:31)
-- CODE: 
idade = int(input(20))
if idade>= 18:
    print("Você é MAIOR de idade. ")
else: 
  print("Voce é MENOR de idade. ")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
28
---- correct output:
28
Maior_de_idade
---- user output:
20Você é MAIOR de idade.
-- TEST CASE 2:
---- input:
17
---- correct output:
17
Menor_de_idade
---- user output:
20Voce é MENOR de idade.
-- TEST CASE 3:
---- input:
10
---- correct output:
10
Menor_de_idade
---- user output:
20Voce é MENOR de idade.
-- TEST CASE 4:
---- input:
18
---- correct output:
18
Maior_de_idade
---- user output:
20Você é MAIOR de idade.
-- TEST CASE 5:
---- input:
22
---- correct output:
22
Maior_de_idade
---- user output:
20Você é MAIOR de idade.
-- TEST CASE 6:
---- input:
18
---- correct output:
18
Maior_de_idade
---- user output:
20Você é MAIOR de idade.
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-03 16:28:09)
-- CODE: 
idade = int(input("Digite a sua idade: 20 "))
if idade>= 18:
    print("Você é MAIOR de idade. ")
else: 
  print("Voce é MENOR de idade. ")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
28
---- correct output:
28
Maior_de_idade
---- user output:
Digite a sua idade: 20 Você é MAIOR de idade.
-- TEST CASE 2:
---- input:
17
---- correct output:
17
Menor_de_idade
---- user output:
Digite a sua idade: 20 Voce é MENOR de idade.
-- TEST CASE 3:
---- input:
10
---- correct output:
10
Menor_de_idade
---- user output:
Digite a sua idade: 20 Voce é MENOR de idade.
-- TEST CASE 4:
---- input:
18
---- correct output:
18
Maior_de_idade
---- user output:
Digite a sua idade: 20 Você é MAIOR de idade.
-- TEST CASE 5:
---- input:
22
---- correct output:
22
Maior_de_idade
---- user output:
Digite a sua idade: 20 Você é MAIOR de idade.
-- TEST CASE 6:
---- input:
18
---- correct output:
18
Maior_de_idade
---- user output:
Digite a sua idade: 20 Você é MAIOR de idade.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-03 16:28:19)
-- CODE: 
idade = int(input("Digite a sua idade: "))
if idade>= 18:
    print("Você é MAIOR de idade. ")
else: 
  print("Voce é MENOR de idade. ")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
28
---- correct output:
28
Maior_de_idade
---- user output:
Digite a sua idade: Você é MAIOR de idade.
-- TEST CASE 2:
---- input:
17
---- correct output:
17
Menor_de_idade
---- user output:
Digite a sua idade: Voce é MENOR de idade.
-- TEST CASE 3:
---- input:
10
---- correct output:
10
Menor_de_idade
---- user output:
Digite a sua idade: Voce é MENOR de idade.
-- TEST CASE 4:
---- input:
18
---- correct output:
18
Maior_de_idade
---- user output:
Digite a sua idade: Você é MAIOR de idade.
-- TEST CASE 5:
---- input:
22
---- correct output:
22
Maior_de_idade
---- user output:
Digite a sua idade: Você é MAIOR de idade.
-- TEST CASE 6:
---- input:
18
---- correct output:
18
Maior_de_idade
---- user output:
Digite a sua idade: Você é MAIOR de idade.
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-03 16:26:46)
-- CODE: 
idade = int(input("Digite a sua idade: "))
if idade>= 18:
    print("Você é MAIOR de idade. ")
else: 
  print("Voce é MENOR de idade. ")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
28
---- correct output:
28
Maior_de_idade
---- user output:
Digite a sua idade: Você é MAIOR de idade.
-- TEST CASE 2:
---- input:
17
---- correct output:
17
Menor_de_idade
---- user output:
Digite a sua idade: Voce é MENOR de idade.
-- TEST CASE 3:
---- input:
10
---- correct output:
10
Menor_de_idade
---- user output:
Digite a sua idade: Voce é MENOR de idade.
-- TEST CASE 4:
---- input:
18
---- correct output:
18
Maior_de_idade
---- user output:
Digite a sua idade: Você é MAIOR de idade.
-- TEST CASE 5:
---- input:
22
---- correct output:
22
Maior_de_idade
---- user output:
Digite a sua idade: Você é MAIOR de idade.
-- TEST CASE 6:
---- input:
18
---- correct output:
18
Maior_de_idade
---- user output:
Digite a sua idade: Você é MAIOR de idade.
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-03 16:28:55)
-- CODE: 
idade = int(input("20: "))
if idade>= 18:
    print("Você é MAIOR de idade. ")
else: 
  print("Voce é MENOR de idade. ")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
28
---- correct output:
28
Maior_de_idade
---- user output:
20: Você é MAIOR de idade.
-- TEST CASE 2:
---- input:
17
---- correct output:
17
Menor_de_idade
---- user output:
20: Voce é MENOR de idade.
-- TEST CASE 3:
---- input:
10
---- correct output:
10
Menor_de_idade
---- user output:
20: Voce é MENOR de idade.
-- TEST CASE 4:
---- input:
18
---- correct output:
18
Maior_de_idade
---- user output:
20: Você é MAIOR de idade.
-- TEST CASE 5:
---- input:
22
---- correct output:
22
Maior_de_idade
---- user output:
20: Você é MAIOR de idade.
-- TEST CASE 6:
---- input:
18
---- correct output:
18
Maior_de_idade
---- user output:
20: Você é MAIOR de idade.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-03 16:29:34)
-- CODE: 
idade = int(input(20))
if idade>= 18:
    print("Você é MAIOR de idade. ")
else: 
  print("Voce é MENOR de idade. ")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
28
---- correct output:
28
Maior_de_idade
---- user output:
20Você é MAIOR de idade.
-- TEST CASE 2:
---- input:
17
---- correct output:
17
Menor_de_idade
---- user output:
20Voce é MENOR de idade.
-- TEST CASE 3:
---- input:
10
---- correct output:
10
Menor_de_idade
---- user output:
20Voce é MENOR de idade.
-- TEST CASE 4:
---- input:
18
---- correct output:
18
Maior_de_idade
---- user output:
20Você é MAIOR de idade.
-- TEST CASE 5:
---- input:
22
---- correct output:
22
Maior_de_idade
---- user output:
20Você é MAIOR de idade.
-- TEST CASE 6:
---- input:
18
---- correct output:
18
Maior_de_idade
---- user output:
20Você é MAIOR de idade.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-03 16:29:00)
-- CODE: 
idade = int(input("20. "))
if idade>= 18:
    print("Você é MAIOR de idade. ")
else: 
  print("Voce é MENOR de idade. ")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
28
---- correct output:
28
Maior_de_idade
---- user output:
20. Você é MAIOR de idade.
-- TEST CASE 2:
---- input:
17
---- correct output:
17
Menor_de_idade
---- user output:
20. Voce é MENOR de idade.
-- TEST CASE 3:
---- input:
10
---- correct output:
10
Menor_de_idade
---- user output:
20. Voce é MENOR de idade.
-- TEST CASE 4:
---- input:
18
---- correct output:
18
Maior_de_idade
---- user output:
20. Você é MAIOR de idade.
-- TEST CASE 5:
---- input:
22
---- correct output:
22
Maior_de_idade
---- user output:
20. Você é MAIOR de idade.
-- TEST CASE 6:
---- input:
18
---- correct output:
18
Maior_de_idade
---- user output:
20. Você é MAIOR de idade.
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-03 16:28:08)
-- CODE: 
idade = int(input("Digite a sua idade: 20 "))
if idade>= 18:
    print("Você é MAIOR de idade. ")
else: 
  print("Voce é MENOR de idade. ")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
28
---- correct output:
28
Maior_de_idade
---- user output:
Digite a sua idade: 20 Você é MAIOR de idade.
-- TEST CASE 2:
---- input:
17
---- correct output:
17
Menor_de_idade
---- user output:
Digite a sua idade: 20 Voce é MENOR de idade.
-- TEST CASE 3:
---- input:
10
---- correct output:
10
Menor_de_idade
---- user output:
Digite a sua idade: 20 Voce é MENOR de idade.
-- TEST CASE 4:
---- input:
18
---- correct output:
18
Maior_de_idade
---- user output:
Digite a sua idade: 20 Você é MAIOR de idade.
-- TEST CASE 5:
---- input:
22
---- correct output:
22
Maior_de_idade
---- user output:
Digite a sua idade: 20 Você é MAIOR de idade.
-- TEST CASE 6:
---- input:
18
---- correct output:
18
Maior_de_idade
---- user output:
Digite a sua idade: 20 Você é MAIOR de idade.
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-03 16:22:20)
-- CODE: 
int(18)print(<18 = false)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
28
---- correct output:
28
Maior_de_idade
-- ERROR:
File "XXXX", line 1
    int(18)print(<18 = false)
           ^^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
17
---- correct output:
17
Menor_de_idade
-- ERROR:
File "XXXX", line 1
    int(18)print(<18 = false)
           ^^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
10
---- correct output:
10
Menor_de_idade
-- ERROR:
File "XXXX", line 1
    int(18)print(<18 = false)
           ^^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
18
---- correct output:
18
Maior_de_idade
-- ERROR:
File "XXXX", line 1
    int(18)print(<18 = false)
           ^^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
22
---- correct output:
22
Maior_de_idade
-- ERROR:
File "XXXX", line 1
    int(18)print(<18 = false)
           ^^^^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
18
---- correct output:
18
Maior_de_idade
-- ERROR:
File "XXXX", line 1
    int(18)print(<18 = false)
           ^^^^^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-03 16:28:54)
-- CODE: 
idade = int(input("20: "))
if idade>= 18:
    print("Você é MAIOR de idade. ")
else: 
  print("Voce é MENOR de idade. ")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
28
---- correct output:
28
Maior_de_idade
---- user output:
20: Você é MAIOR de idade.
-- TEST CASE 2:
---- input:
17
---- correct output:
17
Menor_de_idade
---- user output:
20: Voce é MENOR de idade.
-- TEST CASE 3:
---- input:
10
---- correct output:
10
Menor_de_idade
---- user output:
20: Voce é MENOR de idade.
-- TEST CASE 4:
---- input:
18
---- correct output:
18
Maior_de_idade
---- user output:
20: Você é MAIOR de idade.
-- TEST CASE 5:
---- input:
22
---- correct output:
22
Maior_de_idade
---- user output:
20: Você é MAIOR de idade.
-- TEST CASE 6:
---- input:
18
---- correct output:
18
Maior_de_idade
---- user output:
20: Você é MAIOR de idade.
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-03 16:26:53)
-- CODE: 
idade = int(input("Digite a sua idade: "))
if idade>= 18:
    print("Você é MAIOR de idade. ")
else: 
  print("Voce é MENOR de idade. ")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
28
---- correct output:
28
Maior_de_idade
---- user output:
Digite a sua idade: Você é MAIOR de idade.
-- TEST CASE 2:
---- input:
17
---- correct output:
17
Menor_de_idade
---- user output:
Digite a sua idade: Voce é MENOR de idade.
-- TEST CASE 3:
---- input:
10
---- correct output:
10
Menor_de_idade
---- user output:
Digite a sua idade: Voce é MENOR de idade.
-- TEST CASE 4:
---- input:
18
---- correct output:
18
Maior_de_idade
---- user output:
Digite a sua idade: Você é MAIOR de idade.
-- TEST CASE 5:
---- input:
22
---- correct output:
22
Maior_de_idade
---- user output:
Digite a sua idade: Você é MAIOR de idade.
-- TEST CASE 6:
---- input:
18
---- correct output:
18
Maior_de_idade
---- user output:
Digite a sua idade: Você é MAIOR de idade.
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-03 16:27:03)
-- CODE: 
idade = int(input("Digite a sua idade: "))
if idade>= 18:
    print("Você é MAIOR de idade. ")
else: 
  print("Voce é MENOR de idade. ")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
28
---- correct output:
28
Maior_de_idade
---- user output:
Digite a sua idade: Você é MAIOR de idade.
-- TEST CASE 2:
---- input:
17
---- correct output:
17
Menor_de_idade
---- user output:
Digite a sua idade: Voce é MENOR de idade.
-- TEST CASE 3:
---- input:
10
---- correct output:
10
Menor_de_idade
---- user output:
Digite a sua idade: Voce é MENOR de idade.
-- TEST CASE 4:
---- input:
18
---- correct output:
18
Maior_de_idade
---- user output:
Digite a sua idade: Você é MAIOR de idade.
-- TEST CASE 5:
---- input:
22
---- correct output:
22
Maior_de_idade
---- user output:
Digite a sua idade: Você é MAIOR de idade.
-- TEST CASE 6:
---- input:
18
---- correct output:
18
Maior_de_idade
---- user output:
Digite a sua idade: Você é MAIOR de idade.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-03 16:28:20)
-- CODE: 
idade = int(input("Digite a sua idade: "))
if idade>= 18:
    print("Você é MAIOR de idade. ")
else: 
  print("Voce é MENOR de idade. ")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
28
---- correct output:
28
Maior_de_idade
---- user output:
Digite a sua idade: Você é MAIOR de idade.
-- TEST CASE 2:
---- input:
17
---- correct output:
17
Menor_de_idade
---- user output:
Digite a sua idade: Voce é MENOR de idade.
-- TEST CASE 3:
---- input:
10
---- correct output:
10
Menor_de_idade
---- user output:
Digite a sua idade: Voce é MENOR de idade.
-- TEST CASE 4:
---- input:
18
---- correct output:
18
Maior_de_idade
---- user output:
Digite a sua idade: Você é MAIOR de idade.
-- TEST CASE 5:
---- input:
22
---- correct output:
22
Maior_de_idade
---- user output:
Digite a sua idade: Você é MAIOR de idade.
-- TEST CASE 6:
---- input:
18
---- correct output:
18
Maior_de_idade
---- user output:
Digite a sua idade: Você é MAIOR de idade.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-03 16:29:13)
-- CODE: 
idade = int(input(20))
if idade>= 18:
    print("Você é MAIOR de idade. ")
else: 
  print("Voce é MENOR de idade. ")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
28
---- correct output:
28
Maior_de_idade
---- user output:
20Você é MAIOR de idade.
-- TEST CASE 2:
---- input:
17
---- correct output:
17
Menor_de_idade
---- user output:
20Voce é MENOR de idade.
-- TEST CASE 3:
---- input:
10
---- correct output:
10
Menor_de_idade
---- user output:
20Voce é MENOR de idade.
-- TEST CASE 4:
---- input:
18
---- correct output:
18
Maior_de_idade
---- user output:
20Você é MAIOR de idade.
-- TEST CASE 5:
---- input:
22
---- correct output:
22
Maior_de_idade
---- user output:
20Você é MAIOR de idade.
-- TEST CASE 6:
---- input:
18
---- correct output:
18
Maior_de_idade
---- user output:
20Você é MAIOR de idade.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-03 16:27:01)
-- CODE: 
idade = int(input("Digite a sua idade: "))
if idade>= 18:
    print("Você é MAIOR de idade. ")
else: 
  print("Voce é MENOR de idade. ")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
28
---- correct output:
28
Maior_de_idade
---- user output:
Digite a sua idade: Você é MAIOR de idade.
-- TEST CASE 2:
---- input:
17
---- correct output:
17
Menor_de_idade
---- user output:
Digite a sua idade: Voce é MENOR de idade.
-- TEST CASE 3:
---- input:
10
---- correct output:
10
Menor_de_idade
---- user output:
Digite a sua idade: Voce é MENOR de idade.
-- TEST CASE 4:
---- input:
18
---- correct output:
18
Maior_de_idade
---- user output:
Digite a sua idade: Você é MAIOR de idade.
-- TEST CASE 5:
---- input:
22
---- correct output:
22
Maior_de_idade
---- user output:
Digite a sua idade: Você é MAIOR de idade.
-- TEST CASE 6:
---- input:
18
---- correct output:
18
Maior_de_idade
---- user output:
Digite a sua idade: Você é MAIOR de idade.
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-03 16:29:22)
-- CODE: 
idade = int(input(20)
if idade>= 18:
    print("Você é MAIOR de idade. ")
else: 
  print("Voce é MENOR de idade. ")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
28
---- correct output:
28
Maior_de_idade
-- ERROR:
File "XXXX", line 1
    idade = int(input(20)
               ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
17
---- correct output:
17
Menor_de_idade
-- ERROR:
File "XXXX", line 1
    idade = int(input(20)
               ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
10
---- correct output:
10
Menor_de_idade
-- ERROR:
File "XXXX", line 1
    idade = int(input(20)
               ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
18
---- correct output:
18
Maior_de_idade
-- ERROR:
File "XXXX", line 1
    idade = int(input(20)
               ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
22
---- correct output:
22
Maior_de_idade
-- ERROR:
File "XXXX", line 1
    idade = int(input(20)
               ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
18
---- correct output:
18
Maior_de_idade
-- ERROR:
File "XXXX", line 1
    idade = int(input(20)
               ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-03 16:25:59)
-- CODE: 
idade = int(input("Digite a sua idade: "))
if idade>= 18:
    print("Você é MAIOR de idade. ")
else: 
  print("Voce é MENOR de idade. ")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
28
---- correct output:
28
Maior_de_idade
---- user output:
Digite a sua idade: Você é MAIOR de idade.
-- TEST CASE 2:
---- input:
17
---- correct output:
17
Menor_de_idade
---- user output:
Digite a sua idade: Voce é MENOR de idade.
-- TEST CASE 3:
---- input:
10
---- correct output:
10
Menor_de_idade
---- user output:
Digite a sua idade: Voce é MENOR de idade.
-- TEST CASE 4:
---- input:
18
---- correct output:
18
Maior_de_idade
---- user output:
Digite a sua idade: Você é MAIOR de idade.
-- TEST CASE 5:
---- input:
22
---- correct output:
22
Maior_de_idade
---- user output:
Digite a sua idade: Você é MAIOR de idade.
-- TEST CASE 6:
---- input:
18
---- correct output:
18
Maior_de_idade
---- user output:
Digite a sua idade: Você é MAIOR de idade.
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-03 16:29:40)
-- CODE: 
idade = int(input(20))
if idade>= 18:
    print("Você é MAIOR de idade. ")
else: 
  print("Voce é MENOR de idade. ")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
28
---- correct output:
28
Maior_de_idade
---- user output:
20Você é MAIOR de idade.
-- TEST CASE 2:
---- input:
17
---- correct output:
17
Menor_de_idade
---- user output:
20Voce é MENOR de idade.
-- TEST CASE 3:
---- input:
10
---- correct output:
10
Menor_de_idade
---- user output:
20Voce é MENOR de idade.
-- TEST CASE 4:
---- input:
18
---- correct output:
18
Maior_de_idade
---- user output:
20Você é MAIOR de idade.
-- TEST CASE 5:
---- input:
22
---- correct output:
22
Maior_de_idade
---- user output:
20Você é MAIOR de idade.
-- TEST CASE 6:
---- input:
18
---- correct output:
18
Maior_de_idade
---- user output:
20Você é MAIOR de idade.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-03 16:22:18)
-- CODE: 
int(18)print(<18 = false)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
28
---- correct output:
28
Maior_de_idade
-- ERROR:
File "XXXX", line 1
    int(18)print(<18 = false)
           ^^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
17
---- correct output:
17
Menor_de_idade
-- ERROR:
File "XXXX", line 1
    int(18)print(<18 = false)
           ^^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
10
---- correct output:
10
Menor_de_idade
-- ERROR:
File "XXXX", line 1
    int(18)print(<18 = false)
           ^^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
18
---- correct output:
18
Maior_de_idade
-- ERROR:
File "XXXX", line 1
    int(18)print(<18 = false)
           ^^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
22
---- correct output:
22
Maior_de_idade
-- ERROR:
File "XXXX", line 1
    int(18)print(<18 = false)
           ^^^^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
18
---- correct output:
18
Maior_de_idade
-- ERROR:
File "XXXX", line 1
    int(18)print(<18 = false)
           ^^^^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-03 16:29:12)
-- CODE: 
idade = int(input(20))
if idade>= 18:
    print("Você é MAIOR de idade. ")
else: 
  print("Voce é MENOR de idade. ")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
28
---- correct output:
28
Maior_de_idade
---- user output:
20Você é MAIOR de idade.
-- TEST CASE 2:
---- input:
17
---- correct output:
17
Menor_de_idade
---- user output:
20Voce é MENOR de idade.
-- TEST CASE 3:
---- input:
10
---- correct output:
10
Menor_de_idade
---- user output:
20Voce é MENOR de idade.
-- TEST CASE 4:
---- input:
18
---- correct output:
18
Maior_de_idade
---- user output:
20Você é MAIOR de idade.
-- TEST CASE 5:
---- input:
22
---- correct output:
22
Maior_de_idade
---- user output:
20Você é MAIOR de idade.
-- TEST CASE 6:
---- input:
18
---- correct output:
18
Maior_de_idade
---- user output:
20Você é MAIOR de idade.
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-03 16:25:37)
-- CODE: 
idade = int(input("Digite a sua idade: "))
if idade>= 18:
    print("Você é MAIOR de idade. ")
else: 
  print("Voce é MENOR de idade. ")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
28
---- correct output:
28
Maior_de_idade
---- user output:
Digite a sua idade: Você é MAIOR de idade.
-- TEST CASE 2:
---- input:
17
---- correct output:
17
Menor_de_idade
---- user output:
Digite a sua idade: Voce é MENOR de idade.
-- TEST CASE 3:
---- input:
10
---- correct output:
10
Menor_de_idade
---- user output:
Digite a sua idade: Voce é MENOR de idade.
-- TEST CASE 4:
---- input:
18
---- correct output:
18
Maior_de_idade
---- user output:
Digite a sua idade: Você é MAIOR de idade.
-- TEST CASE 5:
---- input:
22
---- correct output:
22
Maior_de_idade
---- user output:
Digite a sua idade: Você é MAIOR de idade.
-- TEST CASE 6:
---- input:
18
---- correct output:
18
Maior_de_idade
---- user output:
Digite a sua idade: Você é MAIOR de idade.
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-03 16:26:54)
-- CODE: 
idade = int(input("Digite a sua idade: "))
if idade>= 18:
    print("Você é MAIOR de idade. ")
else: 
  print("Voce é MENOR de idade. ")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
28
---- correct output:
28
Maior_de_idade
---- user output:
Digite a sua idade: Você é MAIOR de idade.
-- TEST CASE 2:
---- input:
17
---- correct output:
17
Menor_de_idade
---- user output:
Digite a sua idade: Voce é MENOR de idade.
-- TEST CASE 3:
---- input:
10
---- correct output:
10
Menor_de_idade
---- user output:
Digite a sua idade: Voce é MENOR de idade.
-- TEST CASE 4:
---- input:
18
---- correct output:
18
Maior_de_idade
---- user output:
Digite a sua idade: Você é MAIOR de idade.
-- TEST CASE 5:
---- input:
22
---- correct output:
22
Maior_de_idade
---- user output:
Digite a sua idade: Você é MAIOR de idade.
-- TEST CASE 6:
---- input:
18
---- correct output:
18
Maior_de_idade
---- user output:
Digite a sua idade: Você é MAIOR de idade.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-03 16:25:39)
-- CODE: 
idade = int(input("Digite a sua idade: "))
if idade>= 18:
    print("Você é MAIOR de idade. ")
else: 
  print("Voce é MENOR de idade. ")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
28
---- correct output:
28
Maior_de_idade
---- user output:
Digite a sua idade: Você é MAIOR de idade.
-- TEST CASE 2:
---- input:
17
---- correct output:
17
Menor_de_idade
---- user output:
Digite a sua idade: Voce é MENOR de idade.
-- TEST CASE 3:
---- input:
10
---- correct output:
10
Menor_de_idade
---- user output:
Digite a sua idade: Voce é MENOR de idade.
-- TEST CASE 4:
---- input:
18
---- correct output:
18
Maior_de_idade
---- user output:
Digite a sua idade: Você é MAIOR de idade.
-- TEST CASE 5:
---- input:
22
---- correct output:
22
Maior_de_idade
---- user output:
Digite a sua idade: Você é MAIOR de idade.
-- TEST CASE 6:
---- input:
18
---- correct output:
18
Maior_de_idade
---- user output:
Digite a sua idade: Você é MAIOR de idade.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-03 16:29:21)
-- CODE: 
idade = int(input(20)
if idade>= 18:
    print("Você é MAIOR de idade. ")
else: 
  print("Voce é MENOR de idade. ")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
28
---- correct output:
28
Maior_de_idade
-- ERROR:
File "XXXX", line 1
    idade = int(input(20)
               ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
17
---- correct output:
17
Menor_de_idade
-- ERROR:
File "XXXX", line 1
    idade = int(input(20)
               ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
10
---- correct output:
10
Menor_de_idade
-- ERROR:
File "XXXX", line 1
    idade = int(input(20)
               ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
18
---- correct output:
18
Maior_de_idade
-- ERROR:
File "XXXX", line 1
    idade = int(input(20)
               ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
22
---- correct output:
22
Maior_de_idade
-- ERROR:
File "XXXX", line 1
    idade = int(input(20)
               ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
18
---- correct output:
18
Maior_de_idade
-- ERROR:
File "XXXX", line 1
    idade = int(input(20)
               ^
SyntaxError: '(' was never closed
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-03 16:26:47)
-- CODE: 
idade = int(input("Digite a sua idade: "))
if idade>= 18:
    print("Você é MAIOR de idade. ")
else: 
  print("Voce é MENOR de idade. ")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
28
---- correct output:
28
Maior_de_idade
---- user output:
Digite a sua idade: Você é MAIOR de idade.
-- TEST CASE 2:
---- input:
17
---- correct output:
17
Menor_de_idade
---- user output:
Digite a sua idade: Voce é MENOR de idade.
-- TEST CASE 3:
---- input:
10
---- correct output:
10
Menor_de_idade
---- user output:
Digite a sua idade: Voce é MENOR de idade.
-- TEST CASE 4:
---- input:
18
---- correct output:
18
Maior_de_idade
---- user output:
Digite a sua idade: Você é MAIOR de idade.
-- TEST CASE 5:
---- input:
22
---- correct output:
22
Maior_de_idade
---- user output:
Digite a sua idade: Você é MAIOR de idade.
-- TEST CASE 6:
---- input:
18
---- correct output:
18
Maior_de_idade
---- user output:
Digite a sua idade: Você é MAIOR de idade.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
